youfull/objects/ZM_ZoneKPIConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Configuration of specific KPI to be used in reports for zone manager</description>
    <fields>
        <fullName>ActualField__c</fullName>
        <label>ActualField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseAtRisk2__c</fullName>
        <label>BaseAtRisk2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseAtRisk__c</fullName>
        <label>BaseAtRisk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounAtRiskLastCampaignField__c</fullName>
        <label>CounAtRiskLastCampaignField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountAtRisk2__c</fullName>
        <label>CountAtRisk2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountAtRiskField__c</fullName>
        <label>CountAtRiskField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountOfRisingStarsField__c</fullName>
        <label>CountOfRisingStarsField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomLabel__c</fullName>
        <label>CustomLabel</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DifferenceField__c</fullName>
        <label>DifferenceField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastField__c</fullName>
        <label>ForecastField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastGoalField__c</fullName>
        <label>ForecastGoalField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastInput__c</fullName>
        <label>ForecastInput</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_To_Maximize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal To Maximize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Analysis__c</fullName>
        <label>Last Campaign Analysis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Actions__c</fullName>
        <label>My Actions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanField__c</fullName>
        <label>PlanField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanSPPYField__c</fullName>
        <label>PlanSPPYField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RankField__c</fullName>
        <label>RankField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Field__c</fullName>
        <label>Results Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPYField__c</fullName>
        <label>SPPYField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Activities__c</fullName>
        <label>Suggested Activities</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VarianceField__c</fullName>
        <label>VarianceField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ZM_ZoneKPIConfig</label>
</CustomObject>